update des workshops

--- a/en/index.html
+++ b/en/index.html
@@ -165,7 +165,7 @@
 								</div>
 							</div>-->
 
-							<!-- <div class="newsbox col-md-10 col-md-offset-1">
+							<!--<div class="newsbox col-md-10 col-md-offset-1">
 								<div style="font-size: 18px;color:#fff;padding-bottom: 10px;" class="text-center"><i class="fa fa-calendar"></i> &nbsp;Événements organisés par nos partenaires (gratuits mais sur inscription)</div>
 								<div class="row" style="margin-bottom: 15px;">
 									<div class="col-md-6">									
@@ -177,30 +177,30 @@
 										<a class="btn btn-default btn-special" style="width: 100%;" href="http://www.creaccro.eu/event/fabrication-additive-creativcafe-8-29-septembre/" target="_blank">Creativ'Café #8 le 29/09 à 18h30</a>
 									</div>
 								</div>
-							</div> -->
+							</div>-->
 
-							<!--<div class="newsbox col-md-10 col-md-offset-1">
-								<div style="font-size: 18px;color:#fff;padding-bottom: 10px;" class="text-center"><i class="fa fa-calendar"></i> &nbsp;Workshops de préparation les 07/09 et 14/09</div>
-								Pour cette troisième édition, <a href="http://www.rhenatic.eu/" target="_blank">Rhenatic</a> s’associe à <a href="http://alsacedigitale.org" target="_blank">Alsace Digitale</a> pour créer des <strong>workshops</strong> en amont du Hacking Industry Camp.<br>
+							<div class="newsbox col-md-10 col-md-offset-1">
+								<div style="font-size: 18px;color:#fff;padding-bottom: 10px;" class="text-center"><i class="fa fa-calendar"></i> &nbsp;Preparation Workshops on 11/09, 17/09 and 19/09</div>
+								<!--Pour cette troisième édition, <a href="http://www.rhenatic.eu/" target="_blank">Rhenatic</a> s’associe à <a href="http://alsacedigitale.org" target="_blank">Alsace Digitale</a> pour créer des <strong>workshops</strong> en amont du Hacking Industry Camp.<br>
 								Deux sessions d’idéation de deux demi-journées, animées par la société Xfives sont proposées.<br>
-								L’idée est de transformer vos problématiques en défis prêts à être lancés le temps d’un week-end.<br><br>
+								L’idée est de transformer vos problématiques en défis prêts à être lancés le temps d’un week-end.<br><br>-->
 								<div class="row" style="margin-bottom: 15px;">
 									<div class="col-md-6">
-										<a class="btn btn-default" disabled="disabled" style="width: 100%;" href="https://www.eventbrite.com/e/workshop-hic-saison-1-episode-1-tickets-36611875104" target="_blank">07/09 à 9h à la Fédération des Industries d'Alsace</a>
+										<a class="btn btn-default" style="width: 100%;" href="https://framaforms.org/session-blockchain-en-vue-du-hicamp-2019-1563798633" target="_blank">11/09 at 9h at ES : Blockchain</a>
 									</div>
 									<div class="col-md-6">
-										<a class="btn btn-default" disabled="disabled" style="width: 100%;" href="https://www.eventbrite.com/e/workshop-hic-saison-2-episode-1-tickets-37289096692" target="_blank">07/09 à 17h chez Hager</a>
+										<a class="btn btn-default" style="width: 100%;" href="https://www.eventbrite.fr/e/billets-workshop-hic-conception-inventive-niveau-avance-70623034397" target="_blank">17/09 at 9h at ES : Inventive design for initiated</a>
 									</div>
 								</div>
 								<div class="row">
 									<div class="col-md-6">
-										<a class="btn btn-default" style="width: 100%;" href="https://www.eventbrite.com/e/workshop-hic-saison-1-episode-2-tickets-37289341424" target="_blank">14/09 à 9h chez és</a>
+										<a class="btn btn-default" style="width: 100%;" href="https://www.eventbrite.fr/e/billets-workshop-conception-inventive-hic-debutant-70621519867" target="_blank">17/09 at 17h30 at the Forges Numériques : Inventive design for beginners</a>
 									</div>
 									<div class="col-md-6">
-										<a class="btn btn-default" style="width: 100%;" href="https://www.eventbrite.fr/e/billets-workshop-hic-saison-2-episode-2-37289498895">14/09 à 17h chez Socomec</a>
+										<a class="btn btn-default" style="width: 100%;" href="https://framaforms.org/session-ux-en-vue-du-hicamp-2019-1563800996" target="_blank">19/09 at 17h at ES : Customer and user experience</a>
 									</div>
 								</div>
-							</div>-->
+							</div>
 
 							<div class="hero-features row" style="margin-top: 45px;">
 
@@ -1237,7 +1237,7 @@
 						<a href="http://www.strataggem.com/" target="_blank" style="background: white; padding: 8px;"><img src="../images/contents/strataggem.png" alt="Strataggem"></a>
 						<a href="http://www.insa-strasbourg.fr/" target="_blank"><img src="../images/contents/insa.png" alt="INSA Strasbourg"></a>
 						<a href="https://www.orange.fr/" target="_blank"><img src="../images/contents/orange.png" alt="orange"></a>
-						<a href="http://www.cushabitat.fr/" target="_blank"><img src="../images/contents/ophea.jpg" alt="Ophéa"></a>
+						<a href="http://www.cushabitat.fr/" target="_blank"><img src="../images/contents/ophea.jpg" alt="Ophéa" width="300" height="300"></a>
 						<!--<a href="http://www.alsacechampagneardennelorraine.eu/" target="_blank"><img src="../images/contents/regiongrandest.png" alt="Région Grand Est"></a>
 						<a href="https://www.interregeurope.eu/" target="_blank"><img src="../images/contents/interreg.jpg" alt="Interreg Europe"></a>-->
 					</div>
