--- a/index.html
+++ b/index.html
@@ -117,20 +117,20 @@
 
 				<div class="section-background">
 					<!-- VIDEO BACKGROUND -->
-					<!-- <div class="section-background-video section-background-dot-overlay parallax" data-stellar-ratio="0.4">
+					<!--<div class="section-background-video section-background-dot-overlay parallax" data-stellar-ratio="0.4">
 						<video preload="auto" autoplay loop muted poster="images/backgrounds/video-fallback-bg.jpg" style="opacity: 0.3;">
 							<source type="video/mp4" src="videos/video-bg.mp4">
 							<source type="video/ogg" src="videos/video-bg.ogv">
 							<source type="video/webm" src="videos/video-bg.webm">
 						</video>
-					</div> -->
+					</div>-->
 
 					<!-- SLIDESHOW BACKGROUND -->
-					<!-- <ul class="section-background-slideshow parallax" data-stellar-ratio="0.4" data-speed="800" data-timeout="4000">
+					<!--<ul class="section-background-slideshow parallax" data-stellar-ratio="0.4" data-speed="800" data-timeout="4000">
 						<li><img src="images/backgrounds/hero-bg-slideshow-1.jpg" alt="" style="opacity: 0.25;"></li>
 						<li><img src="images/backgrounds/hero-bg-slideshow-2.jpg" alt="" style="opacity: 0.25;"></li>
 						<li><img src="images/backgrounds/hero-bg-slideshow-3.jpg" alt="" style="opacity: 0.2;"></li>
-					</ul> -->
+					</ul>-->
 
 				</div>
 
@@ -166,7 +166,7 @@
 								</div>
 							</div>-->
 
-							<!-- <div class="newsbox col-md-10 col-md-offset-1">
+							<!--<div class="newsbox col-md-10 col-md-offset-1">
 								<div style="font-size: 18px;color:#fff;padding-bottom: 10px;" class="text-center"><i class="fa fa-calendar"></i> &nbsp;Événements organisés par nos partenaires (gratuits mais sur inscription)</div>
 								<div class="row" style="margin-bottom: 15px;">
 									<div class="col-md-6">
@@ -178,27 +178,27 @@
 										<a class="btn btn-default btn-special" style="width: 100%;" href="http://www.creaccro.eu/event/fabrication-additive-creativcafe-8-29-septembre/" target="_blank">Creativ'Café #8 le 29/09 à 18h30</a>
 									</div>
 								</div>
-							</div> -->
+							</div>-->
 
-							<!--<div class="newsbox col-md-10 col-md-offset-1">-->
-								<!--<div style="font-size: 18px;color:#fff;padding-bottom: 10px;" class="text-center"><i class="fa fa-calendar"></i> &nbsp;Workshops de préparation les 19/09 et 27/09</div>
-								Deux sessions d’idéation de deux demi-journées pour transformer vos problématiques en défis !<br><br>
+							<div class="newsbox col-md-10 col-md-offset-1">
+								<div style="font-size: 18px;color:#fff;padding-bottom: 10px;" class="text-center"><i class="fa fa-calendar"></i> &nbsp;Workshops de préparation les 11/09, 17/09 et 19/09</div>
+								<!--Deux sessions d’idéation de deux demi-journées pour transformer vos problématiques en défis !<br><br>-->
 								<div class="row" style="margin-bottom: 15px;">
 									<div class="col-md-6">
-										<a class="btn btn-default disabled" style="width: 100%;" href="https://www.eventbrite.fr/e/billets-workshop-hic-conception-inventive-saison-1-episode-1-49932448297" target="_blank">19/09 à 9h Chez ES</a>
+										<a class="btn btn-default" style="width: 100%;" href="https://framaforms.org/session-blockchain-en-vue-du-hicamp-2019-1563798633" target="_blank">11/09 à 9h chez ES : Blockchain</a>
 									</div>
-									<div class="col-md-6">
-										<a class="btn btn-default disabled" style="width: 100%;" href="https://www.eventbrite.fr/e/billets-workshop-conception-inventive-hic-saison-2-episode-1-49932506471" target="_blank">19/09 à 17h chez Socomec</a>
-									</div>
+                                    <div class="col-md-6">
+                                        <a class="btn btn-default" style="width: 100%;" href="https://www.eventbrite.fr/e/billets-workshop-hic-conception-inventive-niveau-avance-70623034397" target="_blank">17/09 à 9h chez ES : Conception inventive pour les initiés</a>
+                                    </div>
 								</div>
 								<div class="row">
 									<div class="col-md-6">
-										<a class="btn btn-default" style="width: 100%;" href="https://www.eventbrite.fr/e/billets-workshop-hic-conception-inventive-saison-1-episode-2-fren-49933545579" target="_blank">27/09 à 9h à La Plage Digitale</a>
+										<a class="btn btn-default" style="width: 100%;" href="https://www.eventbrite.fr/e/billets-workshop-conception-inventive-hic-debutant-70621519867" target="_blank">17/09 à 17h30 aux Forges Numériques: Conception inventive pour les débutants</a>
 									</div>
-									<div class="col-md-6">
-										<a class="btn btn-default" style="width: 100%;" href="https://www.eventbrite.fr/e/billets-workshop-hic-conception-inventive-saison-2-episode-2-49933724113" target="_blank">27/09 à 17h à La Plage Digitale</a>
-									</div>
-								</div>-->
+                                    <div class="col-md-6">
+                                        <a class="btn btn-default" style="width: 100%;" href="https://framaforms.org/session-ux-en-vue-du-hicamp-2019-1563800996" target="_blank">19/09 à 9h chez ES : Expérience utilisateur et client</a>
+                                    </div>
+								</div>
 								<!--<div class="row">
 									<div class="col-md-12">
 										<br>Et pour aller plus loin, découvrez les méthodes agiles SCRUM avec des LEGOs grâce à Sogeti...<br><br>
@@ -220,7 +220,7 @@
 										<a class="btn btn-default" style="width: 100%;" href="https://www.eventbrite.fr/e/billets-webinar4-hic-la-blockchain-a-quoi-sert-elle-vraiment-50345989209" target="_blank">11/10 à 12h<br><span>A quoi sert vraiment la Blockchain ?</span></a>
 									</div>
 								</div>-->
-							<!--</div>-->
+							</div>
 
 
 							<div class="hero-features row" style="margin-top: 45px;">
@@ -433,7 +433,7 @@
 						<div class="col-md-6">
 							<h3 class="closing-shout">Inscris ? Consultez dès à présent la liste des défis, vous pouvez également proposer le vôtre !</h3>
 
-							<div class="closing-buttons" target="_blank" data-animation="tada"><a href="http://hic2019.sparkboard.com/"class="btn btn-lg btn-primary" target="_blank">Voir les défis / Proposer un défi</a></div>
+							<div class="closing-buttons" target="_blank" data-animation="tada"><a href="http://hic2019.sparkboard.com/" class="btn btn-lg btn-primary" target="_blank">Voir les défis / Proposer un défi</a></div>
 						</div>
 					</div>
 				</div>
@@ -577,8 +577,8 @@
 					<div class="col-md-12 text-center">
 						<a href="https://drive.google.com/open?id=0B0S2y3rk51DNbVhjZnVyQ3FGNE0" target="_blank">GRANDE​ ​PREMIERE​ ​: LE​ ​HACKING​ ​INDUSTRY​ ​CAMP​ ​DEVIENT​ ​TRINATIONAL​ ​!</a> &nbsp;-&nbsp; <a href="https://drive.google.com/open?id=0B0S2y3rk51DNa0RaUTJOdl9JWEE" target="_blank">Sie sprechen Deutsch ?</a>
 					</div>
-				</div>-->
-			</section>
+				</div>
+			</section>-->
 
 			<!-- KEYNOTES -->
 			<!--<section id="keynotes" class="section section-dark">
@@ -1459,7 +1459,7 @@
 				<div class="section-background">
 
 					<div class="section-background-image parallax" data-stellar-ratio="0.4">
-						<img src="images/backgrounds/arduino.jpg" style="opacity: 0.20;">
+						<img src="images/backgrounds/arduino.jpg" style="opacity: 0.20;" alt>
 					</div>
 
 				</div>
