changement des liens de la billetterie et activation des boutons

--- a/index.html
+++ b/index.html
@@ -207,8 +207,7 @@
                             <div class="col-md-6">
                                 <a class="btn btn-default"
                                    href="https://www.eventbrite.fr/e/billets-workshop-conception-inventive-hic-debutant-70621519867"
-                                   style="width: 100%;" target="_blank">17/09 à 17h30 aux Forges Numériques: Conception inventive pour les
-                                    débutants</a>
+                                   style="width: 100%;" target="_blank">17/09 à 17h30 aux Forges Numériques: Conception inventive pour les débutants</a>
                             </div>
                             <div class="col-md-6">
                                 <a class="btn btn-default" href="https://framaforms.org/session-ux-en-vue-du-hicamp-2019-1563800996"
