ajout des webinaires et déplacement d'its en silver sponsor

--- a/index.html
+++ b/index.html
@@ -214,6 +214,27 @@
                                    style="width: 100%;" target="_blank">19/09 à 9h chez ES : Expérience utilisateur et client</a>
                             </div>
                         </div>
+                        <br>
+                        <div class="text-center" style="font-size: 18px;color:#fff;padding-bottom: 10px;"><i class="fa fa-calendar"></i> Webinaires les 19/09, 26/09 et 03/10
+                        </div>
+                        <div class="row" style="margin-bottom: 15px;">
+                            <div class="col-md-6">
+                                <a class="btn btn-default" href="https://www.eventbrite.fr/e/billets-webinar1-hic-le-design-thinking-une-aide-a-la-transformation-71662204583"
+                                   style="width: 100%;" target="_blank">19/09 à 12h30 : Design thinking</a>
+                            </div>
+                            <div class="col-md-6">
+                                <a class="btn btn-default"
+                                   href="https://www.eventbrite.fr/e/billets-webinar2-hic-la-connectivite-iot-71663470369"
+                                   style="width: 100%;"
+                                   target="_blank">26/09 à 12h30 : La connectivité IOT</a>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-6">
+                                <a class="btn btn-default" href="https://www.eventbrite.fr/e/billets-webinar3-hic-introduction-a-la-qualite-des-datas-techniques-71664136361"
+                                   style="width: 100%;" target="_blank">03/10 à 12h30 : Introduction à la qualité des datas techniques</a>
+                            </div>
+                        </div>
                         <!--<div class="row">
                             <div class="col-md-12">
                                 <br>Et pour aller plus loin, découvrez les méthodes agiles SCRUM avec des LEGOs grâce à Sogeti...<br><br>
@@ -1527,15 +1548,14 @@
 
             <div class="sponsors-row" data-animation="bounceIn">
                 <h3 style="font-size: 17px;">Silver Sponsors</h3><br>
-                <a href="http://www.caisse-epargne.fr/" target="_blank"><img alt="Caisse d'Epargne Alsace"
-                                                                             src="images/contents/caisse-epargne.jpg"></a>
+                <a href="http://www.caisse-epargne.fr/" target="_blank"><img alt="Caisse d'Epargne Alsace" src="images/contents/caisse-epargne.jpg"></a>
                 <a href="http://www.hagergroup.com/" target="_blank"><img alt="Hager" src="images/contents/hager-group.png"></a>
                 <a href="http://www.rhenatic.eu/" target="_blank"><img alt="Rhénatic" src="images/contents/rhenatic.png" style="width: 180px;"></a>
-                <a href="http://www.strataggem.com/" style="background: white; padding: 8px;" target="_blank"><img
-                        alt="Strataggem" src="images/contents/strataggem.png"></a>
+                <a href="http://www.strataggem.com/" style="background: white; padding: 8px;" target="_blank"><img alt="Strataggem" src="images/contents/strataggem.png"></a>
                 <a href="http://www.insa-strasbourg.fr/" target="_blank"><img alt="INSA Strasbourg" src="images/contents/insa.png"></a>
                 <a href="https://www.orange.fr/" target="_blank"><img alt="orange" src="images/contents/orange.png"></a>
                 <a href="http://www.cushabitat.fr/" target="_blank"><img alt="Ophéa" height="300" src="images/contents/ophea.jpg" width="300"></a>
+                <a href="https://its-future.com/" target="_blank"><img alt="its future" src="images/contents/its.png"></a>
                 <!--<a href="http://www.alsacechampagneardennelorraine.eu/" target="_blank"><img src="images/contents/regiongrandest.png" alt="Région Grand Est"></a>
                 <a href="https://www.interregeurope.eu/" target="_blank"><img src="images/contents/interreg.jpg" alt="Interreg Europe"></a>-->
             </div>
@@ -1543,7 +1563,6 @@
             <div class="sponsors-row" data-animation="bounceIn">
                 <h3 style="font-size: 17px;">Bronze Sponsors</h3><br>
                 <a href="http://scalingo.com" target="_blank"><img alt="Scalingo" src="images/contents/scalingo.svg" width="220"></a>
-                <a href="https://its-future.com/" target="_blank"><img alt="its future" src="images/contents/its.png"></a>
                 <a href="http://www.agoracalyce.com/" target="_blank"><img alt="Agora Calycé" src="images/contents/agora.png"></a>
                 <a href="https://www.thurmelec.fr/" target="_blank"><img alt="thurmelec" src="images/contents/thurmelec.jpg"></a>
                 <a href="https://fr.rs-online.com/web/" target="_blank"><img alt="rs" src="images/contents/rs.png"></a>
@@ -1792,7 +1811,8 @@
         i['GoogleAnalyticsObject'] = r;
         i[r] = i[r] || function () {
             (i[r].q = i[r].q || []).push(arguments)
-        }; i[r].l = 1 * new Date();
+        };
+        i[r].l = 1 * new Date();
         a = s.createElement(o);
         m = s.getElementsByTagName(o)[0];
         a.async = true;
