--- a/en/index.html
+++ b/en/index.html
@@ -219,6 +219,27 @@
                                    style="width: 100%;" target="_blank">19/09 at 17h at ES : Customer and user experience</a>
                             </div>
                         </div>
+                        <br>
+                        <div class="text-center" style="font-size: 18px;color:#fff;padding-bottom: 10px;"><i class="fa fa-calendar"></i> Webinaires les 19/09, 26/09 et 03/10
+                        </div>
+                        <div class="row" style="margin-bottom: 15px;">
+                            <div class="col-md-6">
+                                <a class="btn btn-default" href="https://www.eventbrite.fr/e/billets-webinar1-hic-le-design-thinking-une-aide-a-la-transformation-71662204583"
+                                   style="width: 100%;" target="_blank">19/09 à 12h30 : Design thinking</a>
+                            </div>
+                            <div class="col-md-6">
+                                <a class="btn btn-default"
+                                   href="https://www.eventbrite.fr/e/billets-webinar2-hic-la-connectivite-iot-71663470369"
+                                   style="width: 100%;"
+                                   target="_blank">26/09 à 12h30 : La connectivité IOT</a>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-6">
+                                <a class="btn btn-default" href="https://www.eventbrite.fr/e/billets-webinar3-hic-introduction-a-la-qualite-des-datas-techniques-71664136361"
+                                   style="width: 100%;" target="_blank">03/10 à 12h30 : Introduction à la qualité des datas techniques</a>
+                            </div>
+                        </div>
                     </div>
 
                     <div class="hero-features row" style="margin-top: 45px;">
@@ -1280,6 +1301,7 @@
                 <a href="http://www.insa-strasbourg.fr/" target="_blank"><img alt="INSA Strasbourg" src="../images/contents/insa.png"></a>
                 <a href="https://www.orange.fr/" target="_blank"><img alt="orange" src="../images/contents/orange.png"></a>
                 <a href="http://www.cushabitat.fr/" target="_blank"><img alt="Ophéa" height="300" src="../images/contents/ophea.jpg" width="300"></a>
+                <a href="https://its-future.com/" target="_blank"><img alt="its future" src="../images/contents/its.png"></a>
                 <!--<a href="http://www.alsacechampagneardennelorraine.eu/" target="_blank"><img src="../images/contents/regiongrandest.png" alt="Région Grand Est"></a>
                 <a href="https://www.interregeurope.eu/" target="_blank"><img src="../images/contents/interreg.jpg" alt="Interreg Europe"></a>-->
             </div>
@@ -1287,7 +1309,6 @@
             <div class="sponsors-row" data-animation="bounceIn">
                 <h3 style="font-size: 17px;">Bronze Sponsors</h3><br>
                 <a href="http://scalingo.com" target="_blank"><img alt="Scalingo" src="../images/contents/scalingo.svg" width="220"></a>
-                <a href="https://its-future.com/" target="_blank"><img alt="its future" src="../images/contents/its.png"></a>
                 <a href="http://www.agoracalyce.com/" target="_blank"><img alt="Agora Calycé" src="../images/contents/agora.png"></a>
                 <a href="https://www.thurmelec.fr/" target="_blank"><img alt="thurmelec" src="../images/contents/thurmelec.jpg"></a>
                 <a href="https://fr.rs-online.com/web/" target="_blank"><img alt="rs" src="../images/contents/rs.png"></a>
