--- a/en/index.html
+++ b/en/index.html
@@ -219,87 +219,81 @@
                                    style="width: 100%;" target="_blank">19/09 at 17h at ES : Customer and user experience</a>
                             </div>
                         </div>
+
+                        <div class="text-center" style="font-size: 18px;color:#fff;padding-top: 8px;">
+                            <i class="fa fa-video-camera"></i> &nbsp;Discover the webinars, to deepen your knowledge before the HIC !
+                        </div>
                         <br>
-                        <div class="text-center" style="font-size: 18px;color:#fff;padding-bottom: 10px;"><i class="fa fa-calendar"></i> Webinaires les 19/09, 26/09 et 03/10
-                        </div>
-                        <div class="row" style="margin-bottom: 15px;">
-                            <div class="col-md-6">
-                                <a class="btn btn-default" href="https://www.eventbrite.fr/e/billets-webinar1-hic-le-design-thinking-une-aide-a-la-transformation-71662204583"
-                                   style="width: 100%;" target="_blank">19/09 à 12h30 : Design thinking</a>
+                        <div class="webinars row" style="margin-bottom: 15px; padding-left: 145px; padding-right: -80px; margin-right: -80px;">
+                            <div class="col-md-3">
+                                <a class="btn btn-default" href="https://www.eventbrite.fr/e/billets-webinar1-hic-le-design-thinking-une-aide-a-la-transformation-71662204583" style="width: 100%;" target="_blank">19/09 at 12h30<br><span>Design thinking</span></a>
                             </div>
-                            <div class="col-md-6">
-                                <a class="btn btn-default"
-                                   href="https://www.eventbrite.fr/e/billets-webinar2-hic-la-connectivite-iot-71663470369"
-                                   style="width: 100%;"
-                                   target="_blank">26/09 à 12h30 : La connectivité IOT</a>
+                            <div class="col-md-3">
+                                <a class="btn btn-default" href="https://www.eventbrite.fr/e/billets-webinar2-hic-la-connectivite-iot-71663470369" style="width: 100%;" target="_blank">26/09 at 12h30<br><span>IOT Connectivity</span></a>
+                            </div>
+                            <div class="col-md-3">
+                                <a class="btn btn-default" href="https://www.eventbrite.fr/e/billets-webinar3-hic-introduction-a-la-qualite-des-datas-techniques-716641363613" style="width: 100%; height: 100%;" target="_blank">03/10 at 12h30<br><span>Introduction to the quality of technical datas</span></a>
                             </div>
                         </div>
-                        <div class="row">
-                            <div class="col-md-6">
-                                <a class="btn btn-default" href="https://www.eventbrite.fr/e/billets-webinar3-hic-introduction-a-la-qualite-des-datas-techniques-71664136361"
-                                   style="width: 100%;" target="_blank">03/10 à 12h30 : Introduction à la qualité des datas techniques</a>
-                            </div>
-                        </div>
-                    </div>
 
-                    <div class="hero-features row" style="margin-top: 45px;">
+                        <div class="hero-features row" style="margin-top: 45px;">
 
-                        <div class="hero-features-left col-md-6">
+                            <div class="hero-features-left col-md-6">
 
-                            <div class="video-embed">
-                                <iframe allowfullscreen height="315" src="https://www.youtube.com/embed/LdxzQsZE93Y?cc_load_policy=1"
-                                        width="560"></iframe>
-                            </div>
-                            <!--<img src="/images/contents/amphi2.jpg" style="width: 100%" alt="hacking industry camp 2017">-->
+                                <div class="video-embed">
+                                    <iframe allowfullscreen height="315" src="https://www.youtube.com/embed/LdxzQsZE93Y?cc_load_policy=1"
+                                            width="560"></iframe>
+                                </div>
+                                <!--<img src="/images/contents/amphi2.jpg" style="width: 100%" alt="hacking industry camp 2017">-->
 
-                            <p class="lead"><strong>54 hours to stimulate innovation</strong> <br>The 4th edition of the hackathon dedicated to
-                                industry in Alsace.<br>54 hours to innovate and invent industry 4.0
-                                <span style="font-style: normal;font-size: 17px; padding-top: 6px;"><br>
+                                <p class="lead"><strong>54 hours to stimulate innovation</strong> <br>The 4th edition of the hackathon dedicated to
+                                    industry in Alsace.<br>54 hours to innovate and invent industry 4.0
+                                    <span style="font-style: normal;font-size: 17px; padding-top: 6px;"><br>
 										<strong>Take a look at the previous editions: </strong> 
 										<a href="http://2018.hackingindustry.camp/" target="_blank">2018</a> -
 										<a href="http://2017.hackingindustry.camp/" target="_blank">2017</a>
 									</span>
 
-                        </div>
+                            </div>
 
-                        <div class="hero-features-right col-md-6" data-animation="fadeIn">
+                            <div class="hero-features-right col-md-6" data-animation="fadeIn">
 
-                            <ul class="icon-list">
-                                <li>
-                                    <span class="icon-list-icon fa fa-hand-o-up" data-animation="bounceIn"></span>
-                                    <h4 class="icon-list-title">IDENTIFY THE CHALLENGES</h4>
-                                    <p>Every industry is facing problems. Let's imagine viable solutions and create the future of technology.</p>
-                                </li>
-                                <li>
-                                    <span class="icon-list-icon fa fa-heart-o" data-animation="bounceIn"></span>
-                                    <h4 class="icon-list-title">A MATCHMAKER FOR TOMORROW’S TECHNOLOGY</h4>
-                                    <p>A hackathon is an enjoyable moment. Working on challenges gathers and increases energies.</p>
-                                </li>
-                                <li>
-                                    <span class="icon-list-icon fa fa-lightbulb-o" data-animation="bounceIn"></span>
-                                    <h4 class="icon-list-title">INSPIRE YOURSELF WITH OTHERS</h4>
-                                    <p>Discoveries, meetings, surprises. Working in a hackathon means to get out of its comfort zone.</p>
-                                </li>
-                            </ul>
+                                <ul class="icon-list">
+                                    <li>
+                                        <span class="icon-list-icon fa fa-hand-o-up" data-animation="bounceIn"></span>
+                                        <h4 class="icon-list-title">IDENTIFY THE CHALLENGES</h4>
+                                        <p>Every industry is facing problems. Let's imagine viable solutions and create the future of technology.</p>
+                                    </li>
+                                    <li>
+                                        <span class="icon-list-icon fa fa-heart-o" data-animation="bounceIn"></span>
+                                        <h4 class="icon-list-title">A MATCHMAKER FOR TOMORROW’S TECHNOLOGY</h4>
+                                        <p>A hackathon is an enjoyable moment. Working on challenges gathers and increases energies.</p>
+                                    </li>
+                                    <li>
+                                        <span class="icon-list-icon fa fa-lightbulb-o" data-animation="bounceIn"></span>
+                                        <h4 class="icon-list-title">INSPIRE YOURSELF WITH OTHERS</h4>
+                                        <p>Discoveries, meetings, surprises. Working in a hackathon means to get out of its comfort zone.</p>
+                                    </li>
+                                </ul>
 
-                            <div class="hero-buttons col-md-12 text-center">
-                                <!--<a href="planning.pdf" target="_blank" class="btn btn-lg btn-primary" style="margin-top: 20px;">Voir le planning</a>-->
-                                <a class="btn btn-lg btn-primary" href="https://www.eventbrite.fr/e/billets-hacking-industry-camp-2019-70600870103"
-                                   style="margin-top: 20px;" target="_blank">I want to go!</a>
-                                <!--<a href="#winners" class="btn btn-lg btn-primary" style="margin-top: 20px;">Les résultats</a>
-                                <a href="https://www.facebook.com/media/set/?set=a.1860170557331117.1073741850.114361761912014&type=1&l=735a14f260" target="_blank" class="btn btn-lg btn-primary" style="margin-top: 20px;">Les photos</a>-->
-                                <!--<a href="#about" class="btn btn-lg btn-primary" style="margin-top: 20px;">Découvrir</a>-->
-                                <!--<button disabled="disabled" class="btn btn-default">Registration available soon</button>-->
+                                <div class="hero-buttons col-md-12 text-center">
+                                    <!--<a href="planning.pdf" target="_blank" class="btn btn-lg btn-primary" style="margin-top: 20px;">Voir le planning</a>-->
+                                    <a class="btn btn-lg btn-primary" href="https://www.eventbrite.fr/e/billets-hacking-industry-camp-2019-70600870103"
+                                       style="margin-top: 20px;" target="_blank">I want to go!</a>
+                                    <!--<a href="#winners" class="btn btn-lg btn-primary" style="margin-top: 20px;">Les résultats</a>
+                                    <a href="https://www.facebook.com/media/set/?set=a.1860170557331117.1073741850.114361761912014&type=1&l=735a14f260" target="_blank" class="btn btn-lg btn-primary" style="margin-top: 20px;">Les photos</a>-->
+                                    <!--<a href="#about" class="btn btn-lg btn-primary" style="margin-top: 20px;">Découvrir</a>-->
+                                    <!--<button disabled="disabled" class="btn btn-default">Registration available soon</button>-->
+                                </div>
+
                             </div>
 
                         </div>
 
                     </div>
-
                 </div>
-            </div>
 
-        </div>
+            </div>
 
     </section>
 
