ajout du workshop lego et changement graphique des webinars (meilleure visibilité sur mobile), ajout des tags open graph et twitter

--- a/en/index.html
+++ b/en/index.html
@@ -18,6 +18,21 @@
     <title>Hacking Industry Camp 2019 by Alsace Digitale</title>
     <meta content="Hacking Industry Camp, 54h to innovate in the industry field. From the 11th to the 13th of October 2019 in Strasbourg"
           name="description">
+    <meta content="Hacking Industry Camp" name="title">
+
+    <!-- Open Graph / Facebook -->
+    <meta content="website" property="og:type">
+    <meta content="http://www.hackingindustry.camp/" property="og:url">
+    <meta content="Hacking Industry Camp" property="og:title">
+    <meta content="Hacking Industry Camp, 54h to innovate in the industry field. From the 11th to the 13th of October 2019 in Strasbourg" property="og:description">
+    <meta content="/*URL*/" property="og:image">
+
+    <!-- Twitter -->
+    <meta content="summary_large_image" property="twitter:card">
+    <meta content="http://www.hackingindustry.camp/" property="twitter:url">
+    <meta content="Hacking Industry Camp" property="twitter:title">
+    <meta content="Hacking Industry Camp, 54h to innovate in the industry field. From the 11th to the 13th of October 2019 in Strasbourg" property="twitter:description">
+    <meta content="/*URL*/" property="twitter:image">
 
     <!-- FAVICONS -->
     <link href="/images/favicons/favicon.ico" rel="icon">
@@ -219,21 +234,27 @@
                                    style="width: 100%;" target="_blank">19/09 at 17h at ES : Customer and user experience</a>
                             </div>
                         </div>
-
+                        <div class="row">
+                            <div class="col-md-12">
+                                <br>And to go further, discover the Agile SCRUM methods with LEGOs thanks to Sogeti...<br><br>
+                                <a class="btn btn-default" href="https://www.eventbrite.fr/e/billets-workshop-lego-for-scrum-71619735557" style="width: 100%;" target="_blank">Workshop Lego for SCRUM on 02/10 at 17h at Sogeti</a>
+                            </div>
+                        </div>
                         <div class="text-center" style="font-size: 18px;color:#fff;padding-top: 8px;">
                             <i class="fa fa-video-camera"></i> &nbsp;Discover the webinars, to deepen your knowledge before the HIC !
                         </div>
                         <br>
-                        <div class="webinars row" style="margin-bottom: 15px; padding-left: 145px; padding-right: -80px; margin-right: -80px;">
-                            <div class="col-md-3">
+                        <div class="webinars row" style="margin-bottom: 15px; padding-right: -80px; margin-right: -80px; position: relative; width: 100%; left: 15px;">
+                            <div class="col-md-4">
                                 <a class="btn btn-default" href="https://www.eventbrite.fr/e/billets-webinar1-hic-le-design-thinking-une-aide-a-la-transformation-71662204583" style="width: 100%;" target="_blank">19/09 at 12h30<br><span>Design thinking</span></a>
                             </div>
-                            <div class="col-md-3">
+                            <div class="col-md-4">
                                 <a class="btn btn-default" href="https://www.eventbrite.fr/e/billets-webinar2-hic-la-connectivite-iot-71663470369" style="width: 100%;" target="_blank">26/09 at 12h30<br><span>IOT Connectivity</span></a>
                             </div>
-                            <div class="col-md-3">
-                                <a class="btn btn-default" href="https://www.eventbrite.fr/e/billets-webinar3-hic-introduction-a-la-qualite-des-datas-techniques-716641363613" style="width: 100%; height: 100%;" target="_blank">03/10 at 12h30<br><span>Introduction to the quality of technical datas</span></a>
+                            <div class="col-md-4">
+                                <a class="btn btn-default" href="https://www.eventbrite.fr/e/billets-webinar3-hic-introduction-a-la-qualite-des-datas-techniques-716641363613" style="width: 100%; height: 100%;" target="_blank">03/10 at 12h30<br><span>Introduction to quality of technical datas</span></a>
                             </div>
+                            <div class="clear-columns clearfix visible-xs-block visible-sm-block"></div>
                         </div>
                     </div>
                     <div class="hero-features row" style="margin-top: 45px;">
