ajout d'impact positif en "souteneur" ajout d'une image pour twitter et opengraph

--- a/en/index.html
+++ b/en/index.html
@@ -25,14 +25,14 @@
     <meta content="http://www.hackingindustry.camp/" property="og:url">
     <meta content="Hacking Industry Camp" property="og:title">
     <meta content="Hacking Industry Camp, 54h to innovate in the industry field. From the 11th to the 13th of October 2019 in Strasbourg" property="og:description">
-    <meta content="/*URL*/" property="og:image">
+    <meta content="http://www.hackingindustry.camp/images/logos/h2017.png" property="og:image">
 
     <!-- Twitter -->
     <meta content="summary_large_image" property="twitter:card">
     <meta content="http://www.hackingindustry.camp/" property="twitter:url">
     <meta content="Hacking Industry Camp" property="twitter:title">
     <meta content="Hacking Industry Camp, 54h to innovate in the industry field. From the 11th to the 13th of October 2019 in Strasbourg" property="twitter:description">
-    <meta content="/*URL*/" property="twitter:image">
+    <meta content="http://www.hackingindustry.camp/images/logos/h2017.png" property="twitter:image">
 
     <!-- FAVICONS -->
     <link href="/images/favicons/favicon.ico" rel="icon">
@@ -1334,38 +1334,37 @@
 
             <div class="sponsors-row" data-animation="bounceIn">
                 <h3 style="font-size: 17px;">They support Hacking Industry Camp</h3><br>
-                <a href="http://www.alsacetech.org/" target="_blank"><img alt="Alsace Tech" src="../images/contents/alsacetech.jpg"
-                                                                          style="width: 220px;"></a>
+                <a href="http://www.alsacetech.org/" target="_blank"><img alt="Alsace Tech" src="../images/contents/alsacetech.jpg" style="width: 220px;"></a>
                 <a href="http://www.creaccro.eu/" target="_blank"><img alt="Accro" src="../images/contents/accro.jpg"></a>
                 <a href="http://alsace.com/" target="_blank"><img alt="Agence Attractivité Alsace" src="../images/contents/aaa.jpg"></a>
                 <a href="http://lafab.org" target="_blank"><img alt="La Fabrique" src="../images/contents/lafabrique.jpg"></a>
-                <a href="http://www.lafrenchtech-alsace.eu/" target="_blank"><img alt="La French Tech Alsace" src="../images/contents/fta2.png"
-                                                                                  style="height: 150px;"></a>
+                <a href="http://www.lafrenchtech-alsace.eu/" target="_blank"><img alt="La French Tech Alsace" src="../images/contents/fta2.png" style="height: 150px;"></a>
                 <a href="http://alsace.cci.fr/" target="_blank"><img alt="CCI Alsace" src="../images/contents/ccialsace.jpg"></a>
                 <a href="http://adira.com/" target="_blank"><img alt="Adira" src="../images/contents/adira.png"></a>
-                <a href="https://www.grandenov.fr/" target="_blank"><img alt="Grand E-nov" src="../images/contents/grandenov.png"
-                                                                         style="background: white;"></a>
+                <a href="https://www.grandenov.fr/" target="_blank"><img alt="Grand E-nov" src="../images/contents/grandenov.png" style="background: white;"></a>
                 <a href="http://maddyness.com/" target="_blank"><img alt="Maddyness" src="../images/contents/maddyness.jpg"></a>
                 <a href="http://www.xfive.be/" target="_blank"><img alt="XFive" src="../images/contents/xfive.jpg"></a>
                 <a href="http://cpc-analytics.fr" target="_blank"><img alt="Cpc Analytics" src="../images/contents/cpc-analytics.jpg"></a>
                 <a href="http://duipi.unistra.fr/" target="_blank"><img alt="IPI" src="../images/contents/ipi.png"></a>
-                <!--<a href="http://innovationweek.org/france/" target="_blank"><img src="../images/contents/innoweek.png" alt="Innoweek"></a>-->
+                <!--<a href="http://innovationweek.org/france/" target="_blank"><img src="images/contents/innoweek.png" alt="Innoweek"></a>-->
                 <a href="http://marque.alsace/" target="_blank"><img alt="Marque Alsace" src="../images/contents/acoeur.png"></a>
-                <a href="http://www.strasbourgaimesesetudiants.eu/" target="_blank"><img alt="Strasbourg aime ses étudiants"
-                                                                                         src="../images/contents/strasbourg-etudiants.png"></a>
+                <a href="http://www.strasbourgaimesesetudiants.eu/" target="_blank"><img alt="Strasbourg aime ses étudiants" src="../images/contents/strasbourg-etudiants.png"></a>
                 <a href="http://alsacalcul.unistra.fr/" target="_blank"><img alt="Alsa Calcul" src="../images/contents/alsacalcul.jpg"></a>
-                <a href="http://www.conectus.fr/" target="_blank"><img alt="satt connectus"
-                                                                       src="../images/contents/satt.png"
-                                                                       style="background: white; height: 90px; padding: 5px;"></a>
-                <!--<a href="https://www.federation-industries-alsace.com/" target="_blank"><img style="background: white; height: 90px; padding: 5px;" src="../images/contents/fia.png" alt="fia"></a>
-                <a href="http://prglobalmedia.com/" target="_blank" style="background: white; padding: 0 5px;"><img src="../images/contents/prglobalmedia.png" alt="PR Global Media"></a>-->
-                <a href="http://http://epitech.eu/" target="_blank"><img alt="Epitech"
-                                                                         src="../images/contents/epitech.png"
-                                                                         style="background: white; height: 90px; padding: 5px;"></a>
+                <a href="http://www.conectus.fr/" target="_blank"><img alt="satt connectus" src="../images/contents/satt.png" style="background: white; height: 90px; padding: 5px;"></a>
+                <!--<a href="https://www.federation-industries-alsace.com/" target="_blank"><img style="background: white; height: 90px; padding: 5px;" src="images/contents/fia.png" alt="fia"></a>
+<a href="http://prglobalmedia.com/" target="_blank" style="background: white; padding: 0 5px;"><img src="images/contents/prglobalmedia.png" alt="PR Global Media"></a>-->
+                <a href="http://http://epitech.eu/" target="_blank"><img alt="Epitech" src="../images/contents/epitech.png" style="background: white; height: 90px; padding: 5px;"></a>
                 <a href="http://www.reck.fr/" target="_blank"><img alt="Cafés Reck" src="../images/contents/cafe-reck.jpg"></a>
                 <a href="https://sciencemeup.com/" target="_blank"><img alt="Science Me Up" src="../images/contents/sciencemeup.png"></a>
                 <a href="https://www.eifer.kit.edu/" target="_blank"><img alt="Eifer" src="../images/contents/eifer.png" style="background: #fff"></a>
                 <a href="https://www.edf.fr/" target="_blank"><img alt="EDF" src="../images/contents/edf.png"></a>
+                <a href="http://capcod.eu/" target="_blank"><img alt="Capcod" src="../images/contents/capcod.png" style="height: 75px;"></a>
+                <a href="http://blockchain-valley.io/" target="_blank"><img alt="Blockchain Valley" src="../images/contents/blockchain-valley.png"></a>
+                <a href="https://upperrhine40.eu/" target="_blank"><img alt="UpperRhine4.0" src="../images/contents/upper-rhine40.jpg"></a>
+                <a href="https://www.impact-positif.fr/" target="_blank"><img alt="Impact positif" src="../images/contents/logo-square.jpg" width="160"></a>
+                <!-- devient partenaire Lundi 17/06/2019 -->
+                <a href="https://upperrhine40.eu/" target="_blank"><img alt="" src="../images/contents/interreg2018.jpg"><br></a>
+                <!-- inclus dans upper rhine-->
             </div>
 
             <!--<div class="sponsors-row" data-animation="bounceIn">
