--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
     <meta content="http://www.hackingindustry.camp/" property="og:url">
     <meta content="Hacking Industry Camp" property="og:title">
     <meta content="Hacking Industry Camp, 54h pour innover dans l'industrie. Du 11 au 13 octobre 2019 à Strasbourg" property="og:description">
-    <meta content="/*URL*/" property="og:image">
+    <meta content="http://www.hackingindustry.camp/images/logos/h2017.png" property="og:image">
 
     <!-- Twitter -->
     <meta content="summary_large_image" property="twitter:card">
     <meta content="http://www.hackingindustry.camp/" property="twitter:url">
     <meta content="Hacking Industry Camp" property="twitter:title">
     <meta content="Hacking Industry Camp, 54h pour innover dans l'industrie. Du 11 au 13 octobre 2019 à Strasbourg" property="twitter:description">
-    <meta content="/*URL*/" property="twitter:image">
+    <meta content="http://www.hackingindustry.camp/images/logos/h2017.png" property="twitter:image">
 
     <!-- FAVICONS -->
     <link href="images/favicons/favicon.ico" rel="icon">
@@ -518,8 +518,7 @@
 
 <div class="hero-buttons col-md-12 text-center">
 <a href="planning.pdf" target="_blank" class="btn btn-lg btn-primary" style="margin-top: 20px;">Voir le planning</a>-->
-    <a class="btn btn-lg btn-primary" href="https://www.eventbrite.fr/e/billets-hacking-industry-camp-2018-48193252315" style="margin-top: 20px;">J'y
-        vais !</a>
+    <a class="btn btn-lg btn-primary" href="https://www.eventbrite.fr/e/billets-hacking-industry-camp-2019-70600870103" style="margin-top: 20px;">J'y vais !</a>
     <!--<a href="#winners" class="btn btn-lg btn-primary" style="margin-top: 20px;">Les résultats</a>
 <a href="https://www.facebook.com/media/set/?set=a.1860170557331117.1073741850.114361761912014&type=1&l=735a14f260" target="_blank" class="btn btn-lg btn-primary" style="margin-top: 20px;">Les photos</a>-->
     <!--<a href="#about" class="btn btn-lg btn-primary" style="margin-top: 20px;">Découvrir</a>-->
@@ -1459,6 +1458,7 @@ Keynote de Patrick Meyer, IA Technical Leader pour le Groupe Sopra Steria<br>
                 <a href="http://capcod.eu/" target="_blank"><img alt="Capcod" src="images/contents/capcod.png" style="height: 75px;"></a>
                 <a href="http://blockchain-valley.io/" target="_blank"><img alt="Blockchain Valley" src="images/contents/blockchain-valley.png"></a>
                 <a href="https://upperrhine40.eu/" target="_blank"><img alt="UpperRhine4.0" src="images/contents/upper-rhine40.jpg"></a>
+                <a href="https://www.impact-positif.fr/" target="_blank"><img alt="Impact positif" src="images/contents/logo-square.jpg" width="160"></a>
                 <!-- devient partenaire Lundi 17/06/2019 -->
                 <a href="https://upperrhine40.eu/" target="_blank"><img alt="" src="images/contents/interreg2018.jpg"><br></a>
                 <!-- inclus dans upper rhine-->
