fr : un bouton à la mauvaise place enlevé en : ajout de la barre avec les boutons event et sparkboard

--- a/en/index.html
+++ b/en/index.html
@@ -443,8 +443,8 @@
     </section>
 
 
-    <!--<section id="planning" class="section">
-        <div class="container">
+    <section class="section" id="planning">
+        <!--<div class="container">
             <div class="row">
                 <div class="col-md-6 col-md-offset-3 closing-buttons" data-animation="tada"><a href="planning.pdf" target="_blank" class="btn btn-lg btn-primary">Click here to see the full event schedule</a></div>
             </div>
@@ -452,37 +452,42 @@
     </section>-->
 
 
-    <!--<section id="closing" class="closing-section section-dark section">
+        <!--<section id="closing" class="closing-section section-dark section">
 
-        <div class="section-background">
+            <div class="section-background">
 
-            <div class="section-background-image parallax" data-stellar-ratio="0.4">
-                <img src="/images/backgrounds/MakerBot_Replicator_2.jpg" alt="" style="opacity: 0.15;">
-            </div>
+                <div class="section-background-image parallax" data-stellar-ratio="0.4">
+                    <img src="/images/backgrounds/MakerBot_Replicator_2.jpg" alt="" style="opacity: 0.15;">
+                </div>
 
-        </div>
+            </div>-->
 
         <div class="container">
             <div class="row">
-                <div class="col-md-12">
+                <!--<div class="col-md-12">
                     <h3 class="closing-shout">The event #HICamp 2018 is over already, immerse yourself into the event through the awesome pictures our volunteers have taken!</h3>
 
-                    <div class="closing-buttons" target="_blank" data-animation="tada"><a href="https://www.facebook.com/media/set/?set=a.1860170557331117.1073741850.114361761912014&type=1&l=735a14f260"class="btn btn-lg btn-primary" target="_blank">Photo album</a></div>
+                    <div class="closing-buttons" data-animation="tada" target="_blank"><a class="btn btn-lg btn-primary" href="https://www.facebook.com/media/set/?set=a.1860170557331117.1073741850.114361761912014&type=1&l=735a14f260" target="_blank">Photo album</a></div>
                 </div>-->
-    <!--<div class="col-md-6">
-        <h3 class="closing-shout">Are you ready? Register while it's still possible!</h3>
+                <div class="col-md-6">
+                    <h3 class="closing-shout">Are you ready? Register while it's still possible!</h3>
+                    <!--<div class="closing-buttons" data-animation="tada">
+            <button class="btn btn-default" disabled="disabled">La billetterie ouvre bientôt !</button>
+            </div>-->
+                    <div class="closing-buttons" data-animation="tada">
+                        <a class="btn btn-lg btn-primary" href="https://www.eventbrite.fr/e/billets-hacking-industry-camp-2019-70600870103" target="_blank">I want to go!</a>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <h3 class="closing-shout">Registered already? Join or add a challenge on the sparkboard!</h3>
+                    <div class="closing-buttons" data-animation="tada">
+                        <a class="btn btn-lg btn-primary" href="http://hic2019.sparkboard.com/" target="_blank">Access the sparkboard</a>
+                    </div>
+                </div>
+            </div>
+        </div>
 
-        <div class="closing-buttons" data-animation="tada"><a href="https://www.eventbrite.fr/e/billets-hacking-industry-camp-2017-36489834076" class="btn btn-lg btn-primary">J'y vais !</a></div>
-    </div>
-    <div class="col-md-6">
-        <h3 class="closing-shout">Registered already? Join or add a challenge on the sparkboard!</h3>
-
-        <div class="closing-buttons" target="_blank" data-animation="tada"><a href="http://hic2017.sparkboard.com/"class="btn btn-lg btn-primary" target="_blank">Access the sparkboard</a></div>
-    </div>-->
-    <!--</div>
-</div>
-
-</section>-->
+    </section>
 
 
     <!-- HEADLINE
