--- a/index.html
+++ b/index.html
@@ -518,7 +518,7 @@
 
 <div class="hero-buttons col-md-12 text-center">
 <a href="planning.pdf" target="_blank" class="btn btn-lg btn-primary" style="margin-top: 20px;">Voir le planning</a>-->
-    <a class="btn btn-lg btn-primary" href="https://www.eventbrite.fr/e/billets-hacking-industry-camp-2019-70600870103" style="margin-top: 20px;">J'y vais !</a>
+    <!--<a class="btn btn-lg btn-primary" href="https://www.eventbrite.fr/e/billets-hacking-industry-camp-2019-70600870103" style="margin-top: 20px;">J'y vais !</a>-->
     <!--<a href="#winners" class="btn btn-lg btn-primary" style="margin-top: 20px;">Les résultats</a>
 <a href="https://www.facebook.com/media/set/?set=a.1860170557331117.1073741850.114361761912014&type=1&l=735a14f260" target="_blank" class="btn btn-lg btn-primary" style="margin-top: 20px;">Les photos</a>-->
     <!--<a href="#about" class="btn btn-lg btn-primary" style="margin-top: 20px;">Découvrir</a>-->
